@@ -3,12 +3,12 @@ indexpage:
   tiles:
     - title: "Oracle"
       links:
+      - title: "Oracle 19c in Standalone Restart on AWS FSx/EC2 with NFS/ASM"
+        url: /aws_ora_fsx_ec2_nfs_asm.html
       - title: "Oracle Database Deployment and Protection in AWS FSx/EC2 with iSCSI/ASM"
         url: /aws_ora_fsx_ec2_iscsi_asm.html
       - title: "Oracle Database Deployment and Protection on Azure NetApp Files"
         url: /azure_ora_nfile_usecase.html
-      - title: "Oracle 19c RAC Databases on FlexPod DataCenter"
-        url: https://www.netapp.com/pdf.html?item=/media/25782-nva-1155.pdf
       - title: "SAP with Oracle on UNIX and NFS with NetApp Clustered Data ONTAP"
         url: https://www.netapp.com/us/media/tr-4250.pdf
       - title: "Deploy Oracle Database on NetApp ONTAP"
@@ -41,6 +41,8 @@ indexpage:
           url: /hybrid_dbops_snapcenter_usecases.html
         - title: "Backup and Recovery for Microsoft SQL Server on AWS FSx for ONTAP"
           url: /sqlsb-backup-and-restore-aws-fsxn.html
+        - title: "Oracle 19c RAC Databases on FlexPod DataCenter"
+          url: https://www.netapp.com/pdf.html?item=/media/25782-nva-1155.pdf
 
 #
     - title: "Open Source Databases"
