@@ -3,6 +3,9 @@
 |===
 | *Date* | *Solution Area* | *Description of change*
 // end::header[]
+// tag::ent-db[]
+| 05/19/2023 | Database | Added new TR: Oracle 19c in Standalone Restart on AWS FSx/EC2 with NFS/ASM
+// end::ent-db[]
 // tag::hmc[]
 | 02/07/2023 | Hybrid Cloud | Added TR-4955: Disaster Recovery with Azure NetApp Files (ANF) and Azure VMware Solution (AVS)
 // end::hmc[]
